--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "eslint": "^8.36.0",
+    "prettier": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
+    "sass": "^1.59.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
