--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "eslint": "^8.36.0",
+    "formik": "^2.2.9",
     "prettier": "^2.8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
